Grease pencil simplify modifier crashes blender in sample mode #69829

Closed
opened 2019-09-13 05:34:09 +02:00 by heini · 8 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.13

Blender Version
Broken: version: 2.81 (sub 11), branch: master, commit date: 2019-09-12 22:20, hash: 8d12c2a836
Worked: (optional)

Short description of error
adding a simplify modifier to a GP stroke with an assigned vertex group will crash Blender when the modifier is set so 'Sample'

Exact steps for others to reproduce the error

  • create GP stroke
  • assign points to a group
  • add simplify modifier, set to simplify by sample
  • switch to object mode
    gp_simplify_vg_crash.mp4
**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.13 **Blender Version** Broken: version: 2.81 (sub 11), branch: master, commit date: 2019-09-12 22:20, hash: `8d12c2a836` Worked: (optional) **Short description of error** adding a simplify modifier to a GP stroke with an assigned vertex group will crash Blender when the modifier is set so 'Sample' **Exact steps for others to reproduce the error** - create GP stroke - assign points to a group - add simplify modifier, set to simplify by sample - switch to object mode [gp_simplify_vg_crash.mp4](https://archive.blender.org/developer/F7743057/gp_simplify_vg_crash.mp4)
Author

Added subscriber: @heini

Added subscriber: @heini
Antonio Vazquez self-assigned this 2019-09-13 09:27:26 +02:00

I was testing for a while and I can't reproduce it. Do you have any log or maybe a test file?

EDIT: I can reproduce it with today build, but not running a just compiled code in Debug mode.

I was testing for a while and I can't reproduce it. Do you have any log or maybe a test file? EDIT: I can reproduce it with today build, but not running a just compiled code in Debug mode.
Antonio Vazquez removed their assignment 2019-09-13 10:45:18 +02:00
YimingWu was assigned by Antonio Vazquez 2019-09-13 10:45:18 +02:00

Added subscribers: @ChengduLittleA, @antoniov

Added subscribers: @ChengduLittleA, @antoniov

@ChengduLittleA The error is in the function for Weights `BKE_defvert_array_copy()'. I have seen the memory is allocated but never is released. You can test with a simple file like attached in dedbug mode and you will get this:


Error: Not freed memory blocks: 300, total unfreed memory 0.137711 MB
dupli_mapalloc len: 2800 0000024979493F78
copy_deformWeight len: 8 0000024978D402B8
copy_deformWeight len: 8 0000024978D3FEF8
copy_deformWeight len: 8 0000024978D3FD18
copy_deformWeight len: 8 0000024978D3FB38

Could you take a look?

@ChengduLittleA The error is in the function for Weights `BKE_defvert_array_copy()'. I have seen the memory is allocated but never is released. You can test with a simple file like attached in dedbug mode and you will get this: ``` Error: Not freed memory blocks: 300, total unfreed memory 0.137711 MB dupli_mapalloc len: 2800 0000024979493F78 copy_deformWeight len: 8 0000024978D402B8 copy_deformWeight len: 8 0000024978D3FEF8 copy_deformWeight len: 8 0000024978D3FD18 copy_deformWeight len: 8 0000024978D3FB38 ``` Could you take a look?

This issue was referenced by d4fb850366

This issue was referenced by d4fb85036640505b5bcbd5e0ef69512de46aa0ad
YimingWu removed their assignment 2019-09-13 15:10:22 +02:00
Member

Here I provide a diff for the fix, After using blender -d, doesn't appear to have any moew memory leaks from my tests including multiple sample operations.

Here I provide a diff for the fix, After using blender -d, doesn't appear to have any moew memory leaks from my tests including multiple sample operations.
YimingWu self-assigned this 2019-09-13 15:10:58 +02:00
Member

It doesn't crash for my tests, If you had more complex scene, a example file would help to check if the fix really worked. Thanks!

It doesn't crash for my tests, If you had more complex scene, a example file would help to check if the fix really worked. Thanks!
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69829
No description provided.