Fix T69829: Gpencil sample memory leaks.